# Aegis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
aegis/: __init__.py  cli.py  config.py  main.py
aegis.egg-info/: PKG-INFO  SOURCES.txt
aegis/detectors/: command_injection.py  data_leak.py  jwt_inspector.py  path_traversal.py  sqli.py  xss.py
aegis/middleware/: input_validation.py  rate_limiter.py  security_gate.py  security_headers.py
aegis/utils/: logger.py  safe_regex.py
aegis_api_shield.egg-info/: PKG-INFO  SOURCES.txt
api_security_agent/: __init__.py  cli.py  main.py
api_security_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
api_security_agent/detectors/: sqli.py
api_security_agent/middleware/: security_gate.py
src/: main.py
src/detectors/: Untitled-1.py
src/middleware/: security_gate.py  src:middleware:security_gate.py
tests/: conftest.py  test_command_injection.py  test_jwt.py  test_path_traversal.py  test_security_headers.py  test_sqli.py  test_xss.py
